cmake_minimum_required(VERSION 2.8)
add_library(utils STATIC utils.cpp)
include_directories(Modules)
add_library(Http STATIC Modules/Http.cpp)
add_library(DataBase STATIC Modules/DataBase.cpp)
add_library(Session STATIC Modules/Session.cpp)
add_executable(main.cgi main.cpp)
target_link_libraries(main.cgi utils)
target_link_libraries(main.cgi Http)
target_link_libraries(main.cgi DataBase)
target_link_libraries(main.cgi Session)
target_link_libraries(main.cgi cpp_redis)
target_link_libraries(main.cgi tacopie)
target_link_libraries(main.cgi pthread)
target_link_libraries(main.cgi stdc++fs)